Fix bad layout for the collapse filters section

--- a/client/web/src/enterprise/insights/components/insights-view-grid/components/backend-insight/components/drill-down-filters-panel/drill-down-filters/DrillDownInsightFilters.module.scss
+++ b/client/web/src/enterprise/insights/components/insights-view-grid/components/backend-insight/components/drill-down-filters-panel/drill-down-filters/DrillDownInsightFilters.module.scss
@@ -56,8 +56,11 @@
 
 .panel {
     min-width: 0;
-    flex-basis: 22rem;
     flex-grow: 1;
+
+    &--horizontal-mode {
+        flex-basis: 22rem;
+    }
 }
 
 .reg-exp-filters {
